# stain-normalization-gpu

./: .gitignore  README.md  empty_notebook.ipynb  kernel.py  pyproject.toml  setup.md
benchmark/: benchmark_hist_match.py  benchmark_hist_match_cucim.py  benchmark_histogram_matching.py  benchmark_histogram_speed.py  benchmark_histogram_speed_cucim.py  benchmark_macencko.py  benchmark_reinhard.py  visualize_histogram_speed.py  visualize_histogram_speed_cucim.py  viz_histogram_matching.py  viz_macenko.py  viz_reinhard.py
benchmark/result/: benchmark_hist_match.csv
benchmark/results/: histogram_match_speed.csv  histogram_matching_benchmark_results.csv  reinhard_benchmark_results.csv
src/huetuber/: __init__.py  base.py  macenko.py  match_histogram.py  reinhard.py
tests/: test_stain_norm.py
